jdk demo