@@ -15,17 +15,14 @@
         <dependency>
             <groupId>fs.joe</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>fs.joe</groupId>
             <artifactId>config</artifactId>
-            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>fs.joe</groupId>
             <artifactId>database</artifactId>
-            <version>0.0.1</version>
         </dependency>
         <!--<dependency>
             <groupId>Joe</groupId>
@@ -58,4 +55,18 @@
             <version>6.3.1</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
